2010-06-30  Robert Larice  <Robert.Larice@t-online.de>
 * src/include/ftedev.h :
		ansi prototypes for the function pointers in struct DISPDEVICE
		typedef for those functions

 * src/frontend/hpgl.h ,
 * src/frontend/plotting/plot5.h ,
 * src/frontend/plotting/x11.c ,
 * src/frontend/plotting/x11.h ,
 * src/frontend/postsc.h ,
 * src/frontend/wdisp/windisp.h ,
 * src/frontend/wdisp/winprint.h ,
 * src/include/tclspice.h :
		ansi prototypes, make use of the new typedefs

 * src/frontend/display.c :
		cast nodev and nop to the proper function type

 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c :
		fix the type signature for the more or less unused _DefineColor() functions
		fix the type signature for the WIN_Text() function, drop unused CentiDegrees
		  argument, which doesn't fit to struct DISPDEVICE

2010-06-29  Holger Vogt
 * inpcom.c lines 743, 744 correct malloc for 64 bit LINUX
 * inpcom.c, inpcom.h, nutinp.c, inp.c, fteext.h:
   Command files spinit and .spiceinit (comfile==TRUE) will not be
   treated by numparam processing.
   Comment_out_unused_subckt() will no longer process lines inside 
   control section.
 
2010-06-28  Holger Vogt
 * bsim3/b3set.c b3ld.c bsim3def.h: new preproc flag USE_OMP3
 * bsim4/b4set.c b4ld.c bsim4def.h: OpenMP support for BSIM4 model

2010-06-27  Robert Larice
 * src/xspice/enh/enhtrans.c:
	drop useless cast of a copy() return value

2010-06-27  Holger Vogt
 * numparam.h: short replaced by int

2010-06-27  Robert Larice
 * src/ciderlib/support/database.c,
 * src/frontend/com_let.c,
 * src/frontend/define.c,
 * src/frontend/gens.c,
 * src/frontend/plotting/graphdb.c,
 * src/frontend/plotting/plotcurv.c,
 * src/frontend/plotting/plotit.c,
 * src/frontend/postcoms.c,
 * src/frontend/vectors.c,
 * src/maths/poly/interpolate.c,
 * src/spicelib/analysis/dctran.c,
 * src/spicelib/analysis/dctrcurv.c,
 * src/spicelib/devices/nbjt/nbjtset.c,
 * src/spicelib/devices/nbjt/nbjttemp.c,